Fix imports + right align controls

--- a/client/components/post-page/post-page.module.css
+++ b/client/components/post-page/post-page.module.css
@@ -22,6 +22,11 @@
 	margin-bottom: var(--gap);
 }
 
+.controls {
+	display: flex;
+	justify-content: flex-end;
+}
+
 @media screen and (max-width: 900px) {
 	.header {
 		flex-direction: column;
